[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.0"
hashbrown = "0.12.3"
perlin2d = "0.2.6"
lazy_static = "1.4.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "unsafe_textures"]
